// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/Button Accept (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--accept fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--accept fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--accept fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--accept fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--accept fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--accept fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Attention (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--attention"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--attention fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--attention fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--attention fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--attention fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--attention fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--attention fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Critical (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--critical"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--critical fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--critical fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--critical fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--critical fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--critical fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--critical fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Default (Primary) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--icon-only"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Emphasized (Primary) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--emphasized fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--emphasized fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--emphasized fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--emphasized fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--emphasized fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--emphasized fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Ghost (Secondary) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Negative (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--negative"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--negative fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--negative fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--negative fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--negative fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--negative fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--negative fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Neutral (Secondary) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--neutral"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--neutral fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--neutral fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--neutral fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--neutral fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--neutral fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--neutral fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Reject (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--reject"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--reject fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--reject fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--reject fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--reject fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--reject fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--reject fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Segmented Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--selected"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-right"
      >
        
            
        <span
          class="fn-button__text"
        >
          Send
        </span>
        
            
        <span
          class="sap-icon sap-icon--paper-plane"
        />
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent fn-button--icon-left"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
            
        <span
          class="fn-button__text"
        >
          Share
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--selected fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
        
      <button
        aria-label="Share"
        class="fn-button fn-button--transparent fn-button--icon-only"
      >
        
            
        <span
          class="sap-icon sap-icon--share-2"
        />
        
        
      </button>
      
    
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div
      aria-label="Group label"
      class="fn-segmented-button"
      role="group"
    >
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--transparent"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
        
      <button
        class="fn-button fn-button--selected"
        disabled=""
      >
        
            
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
        
      </button>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Success (Semantic) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--success"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--success fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--success fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--success fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--success fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--success fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--success fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Toggled Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--ghost fn-button--toggled fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;

exports[`Storyshots Experimental/Button Transparent (Layout) Button 1`] = `
<section>
  

  <style>
    
    .docs-fn-container {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        column-gap: 0.5rem;
        row-gap: 0.5rem;
        background: white;
        padding: 1.5rem;
        justify-items: center;
        align-items: center;
    }

    .docs-fn-header-container {
        display: flex;
        align-items: center;
    }

    .docs-fn-header-container code {
        margin: 0 1rem;
    }

  </style>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div />
    
    
    <div>
      <b>
        Rest
      </b>
    </div>
    
    
    <div>
      <b>
        Hover
      </b>
    </div>
    
    
    <div>
      <b>
        Active
      </b>
    </div>
    
    
    <div>
      <b>
        Focus
      </b>
    </div>
    
    
    <div>
      <b>
        Disabled
      </b>
    </div>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        No-Icon
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--transparent"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Button
      </span>
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Only
      </b>
    </div>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--transparent fn-button--icon-only"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--transparent fn-button--icon-only is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--transparent fn-button--icon-only is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--transparent fn-button--icon-only is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    
    
    <button
      aria-label="Share"
      class="fn-button fn-button--transparent fn-button--icon-only disabled"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
    
    </button>
    

  </div>
  



  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Right
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-right"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-right is-hover"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-right is-active"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-right is-focus"
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-right"
      disabled=""
    >
      
        
      <span
        class="fn-button__text"
      >
        Send
      </span>
      
        
      <span
        class="sap-icon sap-icon--paper-plane"
      />
      
    
    </button>
    

  </div>
  


  <div
    class="docs-fn-container"
  >
    
    
    <div>
      <b>
        Icon-Left
      </b>
    </div>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-left"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-left is-hover"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-left is-active"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-left is-focus"
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    
    
    <button
      class="fn-button fn-button--transparent fn-button--icon-left"
      disabled=""
    >
      
        
      <span
        class="sap-icon sap-icon--share-2"
      />
      
        
      <span
        class="fn-button__text"
      >
        Share
      </span>
      
    
    </button>
    

  </div>
  

</section>
`;
